2007-Apr-22  Heikki Junnila <hjunnila@users.sf.net>
	* Moved deviceclass.h&cpp, logicalchannel.h&cpp, capability.h&cpp and
	  types.h from main/src to libs/common to make things more sensible.

2007-Apr-10  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed LLA plugin compilation

2007-Mar-31  Heikki Junnila <hjunnila@users.sf.net>
	* Added XML stuff to EFX & functioncollection

2007-Mar-30  Heikki Junnila <hjunnila@users.sf.net>
	* Added libs/lla to CVS. Not sure, whether they work.

2007-Mar-29  Heikki Junnila <hjunnila@users.sf.net>
	* Added preliminary functions for saving workspace data in XML format.
	* Added configure options for plugin enable/disable.

2006-Nov-30  Heikki Junnila <hjunnila@users.sf.net>
	* Added a new command line option -p with which the user can switch
	  directly to operate mode during startup.

2006-Nov-30  Heikki Junnila <hjunnila@users.sf.net>
	* Created release 2.6-1

2006-Nov-30  Heikki Junnila <hjunnila@users.sf.net>
	* Added m_toolbar->setMovingEnabled(false) to all toolbars to prevent
	  them from being dragged all over the place.

2006-Nov-28  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed a bug in pluginmanager.cpp that tried to give an integer
	  to a function that actually takes a QString. Since newer QT versions
	  contain a QString implementation that accepts also integers, this
	  isn't a problem to them. Rather, it's a problem to older QT's

2006-Nov-26  Heikki Junnila <hjunnila@users.sf.net>
	* CVS didn't add files under etc/... Fixed...

2006-Nov-26  Heikki Junnila <hjunnila@users.sf.net>
	* Added normal desktop entries for qlc and dce under etc for
	  non-debian installations.
	* Promoted debian release to version 2.6-0.
	* Modified normal desktop entries to go under Multimedia.
	* Modified debian desktop entries to go under Lighting.
	* Renamed Q.png to qlc.png.
	* Renamed fixtureeditor.png to qlc-fixtureeditor.png.
	* Changed the default debian package command to exclude CVS dirs.